--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.3",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sharp": "^0.33.3",
+    "uuid": "^9.0.1"
   },
   "description": ""
 }
